[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "Grandma catches bad Grandpa"
edition     = "2018"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "grandma"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/grandma"
version     = "0.2.1"

[dependencies]
array-bytes        = { version = "0.3.0" }
clap               = { version = "3.0.0-beta.2" }
colored            = { version = "2.0.0" }
lazy_static        = { version = "1.4.0" }
parity-scale-codec = { version = "2.0.0", features = ["derive"] }
serde              = { version = "1.0.123", features = ["derive"] }
serde_json         = { version = "1.0.62" }
subcryptor         = { version = "0.1.1" }
subgrandpa         = { version = "0.2.2", features = ["codec"] }
subrpcer           = { version = "0.1.5" }
substorager        = { version = "0.1.3" }
tungstenite        = { version = "0.13.0" }
