[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "Grandma catches bad Grandpa"
edition     = "2018"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "grandma"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/grandma"
version     = "0.2.2"

[dependencies]
array-bytes        = { version = "1.1.0" }
clap               = { version = "3.0.0-beta.2" }
colored            = { version = "2.0.0" }
lazy_static        = { version = "1.4.0" }
parity-scale-codec = { version = "2.0.1", features = ["derive"] }
serde              = { version = "1.0.124", features = ["derive"] }
serde_json         = { version = "1.0.64" }
subcryptor         = { version = "0.1.4" }
subgrandpa         = { version = "0.2.4", features = ["codec", "serde"] }
subrpcer           = { version = "0.1.7" }
substorager        = { version = "0.1.5" }
tungstenite        = { version = "0.13.0" }
